--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <button class="view-button" onclick="setView('xy')">XY Plane</button><br>
     <button class="view-button" onclick="setView('yz')">YZ Plane</button><br>
     <button class="view-button" onclick="setView('zx')">ZX Plane</button><br>
-    <button class="view-button" onclick="saveImage()">画像として保存</button>
+    <button class="view-button" onclick="saveImage()">Save Image</button>
   </div>
   <div class="Rotate-btn">
-    <label>X-axis: <input type="number" id="rotate-x" value="90" style="width:50px;">°</label>
-    <button class="view-button" onclick="rotateAxis('x')">rotate</button><br>
-    <label>Y-axis: <input type="number" id="rotate-y" value="90" style="width:50px;">°</label>
-    <button class="view-button" onclick="rotateAxis('y')">rotate</button><br>
-    <label>Z-axis: <input type="number" id="rotate-z" value="90" style="width:50px;">°</label>
-    <button class="view-button" onclick="rotateAxis('z')">rotate</button><br>
+    <label>X-axis: <input type="number" id="rotate-x" value="90" style="width:50px;">deg</label>
+    <button class="view-button" onclick="rotateAxis('x')">Rotate</button><br>
+    <label>Y-axis: <input type="number" id="rotate-y" value="90" style="width:50px;">deg</label>
+    <button class="view-button" onclick="rotateAxis('y')">Rotate</button><br>
+    <label>Z-axis: <input type="number" id="rotate-z" value="90" style="width:50px;">deg</label>
+    <button class="view-button" onclick="rotateAxis('z')">Rotate</button><br>
   </div>
 
   <script type="importmap">
